# rail_collada_models-release

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
launch/: ilab.launch  view.launch
meshes/: banner.dae  banner.min.dae  bed.dae  bed.min.dae  books.dae  books.min.dae  chair.dae  chair.min.dae  coffee-table.dae  coffee-table.min.dae  coffee_table.dae  coffee_table.min.dae  couch.dae  couch.min.dae  counter.dae  counter.min.dae  cup.min.dae  dining-table.dae  dining-table.min.dae  doll_chair.dae  doll_chair.min.dae  doll_table.dae  doll_table.min.dae  dresser.dae  dresser.min.dae  drk_blue.dae  drk_blue.min.dae  fork.min.dae  green.dae  green.min.dae  ikea_kitchen_body.dae  ikea_kitchen_body.min.dae  ikea_toy_chest.dae  ikea_toy_chest.min.dae  kitchen_chair.dae  kitchen_chair.min.dae  kitchen_counter.dae  kitchen_counter.min.dae  kitchen_table.dae  kitchen_table.min.dae  (+45 more)
meshes/original_models/Coffe Table/: coffee_table.skb  coffee_table.skp
meshes/original_models/Kitchen Counter/: kitchen-counter.skb  kitchen-counter.skp
meshes/original_models/Kitchen Table/: kitchen_table.skb  kitchen_table.skp
meshes/original_models/RightShelves/: rightShelves.skb  rightShelves.skp
meshes/original_models/Stool/: stool.skb  stool.skp
meshes/original_models/TV/: tv.skp
meshes/original_models/banner/: banner.skp
meshes/original_models/couch/: couch.skb  couch.skp
rpm/: ros-indigo-rail-collada-models.spec  ros-jade-rail-collada-models.spec  template.spec
rviz/: view_ilab.rviz
urdf/: coffee_table.urdf.xacro  couch.urdf.xacro  ilab.urdf.xacro  kitchen_chair.urdf.xacro  kitchen_counter.urdf.xacro  kitchen_table.urdf.xacro  lab.urdf.xacro  lazy_chair.urdf.xacro  left_shelves.urdf.xacro  nav_goal.urdf.xacro  right_shelves.urdf.xacro  surface.urdf.xacro  tv.urdf.xacro
(+50 files in other folders)
