<?xml version="1.0"?>
<package>
  <name>rail_collada_models</name>
  <version>0.0.1</version>
  <description>Collada Models Used and Developed by the RAIL Lab at WPI</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_collada_models</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_collada_models/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_collada_models</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>
